Closed
Bug 777304
Opened 13 years ago
Closed 13 years ago
const char pointer by get() uses after destructor of NS_ConvertUTF16toUTF8()
Categories
(Core :: General, defect)
Core
General
Tracking
()
RESOLVED
FIXED
mozilla17
People
(Reporter: m_kato, Assigned: m_kato)
Details
Attachments
(1 file)
3.74 KB,
patch
|
benjamin
:
review+
|
Details | Diff | Splinter Review |
const char* path = NS_ConvertUTF16toUTF8(str).get() means
NS_ConvertUTF16toUTF8 xxxx(str);
const char *path = xxxx.get();
delete xxxxx.
So path is already free when using it.
There is invalid usages in the following codes.
content/media/webrtc/MediaEngineWebRTCVideo.cpp
dom/bluetooth/linux/BluetoothDBusService.cpp
widget/android/AndroidGraphicBuffer.cpp
Assignee | ||
Comment 1•13 years ago
|
||
Attachment #645990 -
Flags: review?(benjamin)
Updated•13 years ago
|
Attachment #645990 -
Flags: review?(benjamin) → review+
Assignee | ||
Comment 2•13 years ago
|
||
Target Milestone: --- → mozilla17
Comment 3•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•