Bug 777304 - Don't use freed pointer after destructor of NS_ConvertUTF16toUTF8. r=bsmedberg